# mse-gl-hw

./: CMakeLists.txt
src/App/: CMakeLists.txt  FractalWindow.cpp  FractalWindow.h  Mesh.h  Model.h  Slider.cpp  Slider.h  main.cpp  shaders.qrc
src/App/Shaders/: click.fs  click.vs  diffuse.fs  diffuse.vs
stylized_modular_fireplace/: license.txt  scene.gltf
